--- a/src/app/auth/components/register/register.component.html
+++ b/src/app/auth/components/register/register.component.html
@@ -7,18 +7,35 @@
           <a [routerLink]="['/login']">Have an account?</a>
         </p>
         Backend Errors are here
-        <form>
-          <fieldset>
-            <fieldset>
-              <input type="text" class="form-control form-control-lg" placeholder="Username">
+        <form [formGroup]="form" (ngSubmit)="onSubmit()">
+          <fieldset class="form-group">
+            <fieldset class="form-group">
+              <input
+                type="text"
+                class="form-control form-control-lg"
+                placeholder="Username"
+                formControlName="username"
+              />
             </fieldset>
-            <fieldset>
-              <input type="text" class="form-control form-control-lg" placeholder="Email">
+            <fieldset class="form-group">
+              <input
+                type="text"
+                class="form-control form-control-lg"
+                placeholder="Email"
+                formControlName="email"
+              />
             </fieldset>
-            <fieldset>
-              <input type="password" class="form-control form-control-lg" placeholder="Password">
+            <fieldset class="form-group">
+              <input
+                type="password"
+                class="form-control form-control-lg"
+                placeholder="Password"
+                formControlName="password"
+              />
             </fieldset>
-            <button class="btn btn-lg btn-primary pull-xs-right" type="submit">Sign Up</button>
+            <button class="btn btn-lg btn-primary pull-xs-right" type="submit">
+              Sign Up
+            </button>
           </fieldset>
         </form>
       </div>
